# shelly

./: .gitignore  README.md  loadshed.js  power-underover-off.js  underpower-off.js
archive/: shellybackup.md
archive/shellybackup/: pumphouse.json  pyproject.toml  shellybackup.py
archive/shellybackup/test/: test_diff.py
snippets/: pingshelly.py  pingshelly.sh  rpcPollStateMachine.js  timers-ratelimited-notifications.js  webhook.js
