[tool.poetry]
package-mode = false

[project]
name = "shellybackup"
version = "0.1.0"
description = "Backup and restore a Shelly Gen2+ device"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
